--- a/style.css
+++ b/style.css
@@ -1,5 +1,69 @@
-* {
-    font-family: 'Source Code Pro', monospace;
+body {
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    font-family: "Source Code Pro", monospace;
+}
+
+#sidebar {
+    max-width: 300px;
+    height: 100vh;
+    background: #90CCAC;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex: 0.5;
+    flex-flow: column nowrap;
+    position: sticky;
+    top: 0px;
+    gap: 40px;
+    font-size: 13px;
+    line-height: 17px;
+}
+
+h1.sidebar {
+    color: #ffffff;
+    font-size: 30px;
+    line-height: 17px;
+}
+
+#sidebar > div.sidebar {
+    margin: 25px 0px;
+}
+
+#sidebar1 {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 20px;
+}
+
+a:link, a:visited {
+    color: white;
+}
+
+#footer {
+    color: #ffffff;
+}
+
+#main {
+    display: flex;
+    flex: ;
+    flex-flow: column wrap;
+}
+
+section {
+    flex: auto;
+    display: flex;
+    flex-flow: column wrap;
 }
 
 input, textarea {
