--- a/style.css
+++ b/style.css
@@ -2,11 +2,24 @@ body {
   margin: 0;
   min-height: 100vh;
   display: flex;
+  justify-content: space-between;
   font-family: "Source Code Pro", monospace;
 }
 
 button {
   font-family: "Source Code Pro", monospace;
+}
+
+button.pageButton {
+  background: #eaeaea;
+  color: #333333;
+  font-size: 22px;
+  line-height: 28px;
+  padding: 20px;
+  align-self: flex-start;
+  border: none;
+  margin: 20px 0px;
+  padding: 20px 35px;
 }
 
 #sidebar {
@@ -15,8 +28,7 @@ button {
   background: #90ccac;
   display: flex;
   justify-content: space-between;
-  flex: 0.5;
-  flex-flow: column nowrap;
+  flex-flow: column wrap;
   position: sticky;
   top: 0px;
   gap: 40px;
@@ -49,8 +61,8 @@ ul {
   gap: 20px;
 }
 
-a:link,
-a:visited {
+#sidebar a:link,
+#sidebar a:visited {
   color: white;
 }
 
@@ -58,12 +70,14 @@ a:visited {
   color: #ffffff;
 }
 
-#main {
+main {
   display: flex;
   flex: 1 1 0;
   flex-flow: column wrap;
   align-items: center;
+  justify-content: center;
   gap: 25px;
+  margin-bottom: 75px;
 }
 
 section {
@@ -72,9 +86,10 @@ section {
   flex: 1 1 auto;
   flex-flow: column wrap;
   padding: 0.5em;
+  gap: 25px;
 }
 
-section > p {
+section > form {
   max-width: 860px;
   max-height: 420px;
   font-size: 22px;
@@ -82,7 +97,7 @@ section > p {
   opacity: 0.4;
 }
 
-section > h1 {
+section h1 {
   font-size: 40px;
   line-height: 50px;
   font-weight: 100;
@@ -90,7 +105,7 @@ section > h1 {
   -webkit-text-stroke: 0.75px black;
 }
 
-p input,
+form input,
 textarea {
   font-size: 20px;
   line-height: 25px;
@@ -102,25 +117,13 @@ textarea {
   outline: none;
 }
 
-p > input {
+form > input {
   width: 25%;
 }
 
 #intro,
 #details {
   width: 95%;
-}
-
-button.pageButton {
-  background: #eaeaea;
-  color: #333333;
-  font-size: 22px;
-  line-height: 28px;
-  padding: 20px;
-  flex: 1 1 0;
-  display: inline-flex;
-  align-self: flex-start;
-  border: none;
 }
 
 span {
@@ -189,42 +192,49 @@ p#lastSeen {
 }
 
 #chatMessages > div {
-  padding: 10px;
+  width: 250px;
   background: #e6f7ff;
   border-radius: 5px;
+  position: relative;
+  padding: 12px 30px 12px 15px;
+  font-size: 14px;
+  color: #333333;
+  line-height: 18px;
 }
 
-#chatMessages > div::before {
+#chatMessages > div.chatMessage:before {
   content: "";
   position: absolute;
-  top: -webkit-calc(100% - 10px); /*may require prefix for old browser support*/
-  top: calc(100% - 10px); /*i.e. half the height*/
+  bottom: 70%;
   left: 20px;
-  height: 20px;
+  height: 12px;
   width: 20px;
-  background: gray;
-  transform: rotate(45deg);
+  background: inherit;
+  box-sizing: border-box;
+  transform: rotate(45deg) translate(-25%);
   border-bottom: inherit;
   border-right: inherit;
   box-shadow: inherit;
 }
 
-/* #chatMessages > div::after {
-  position: absolute;
-  content: "";
-  width: 0;
-  height: 0;
-  left: 0px;
-  right: auto;
-  top: 0px;
-  bottom: auto;
-  border: 12px solid;
-  border-color: lightyellow lightyellow transparent transparent;
-} */
-
-#chatMessages :nth-child(2) {
+#chatMessages :nth-child(2).chatMessage {
   background: #f4f6f7;
   align-self: flex-end;
+}
+
+#chatMessages :nth-child(2).chatMessage:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 263px;
+  height: 8px;
+  width: 10px;
+  background: inherit;
+  box-sizing: border-box;
+  transform: rotate(45deg) translate(-50%);
+  border-bottom: inherit;
+  border-right: inherit;
+  box-shadow: inherit;
 }
 
 #chatMessages :nth-child(4) {
@@ -253,16 +263,58 @@ p#lastSeen {
   font: normal normal normal 14px/18px "Source Code Pro", monospace;
 }
 
-#messageInput::focus-visible {
-  
-}
-
 #sendMessageButton {
   border-style: none;
   background: #e6f7ff;
   padding: 20px;
 }
 
+#tableTitle {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+#tableResetButton {
+  flex: 0 1 auto;
+  align-self: center;
+}
+
 table {
-  border: 1px solid;
+  width: 100%;
+  border-collapse: collapse;
+  color: #333333;
+  font: normal normal normal 18px/23px "Source Code Pro", monospace;
+}
+
+th,
+td {
+  padding: 25px;
+  text-align: left;
+}
+
+th {
+  padding: 35px !important;
+}
+
+#tableHeader {
+  background: #aebed8;
+  color: white;
+  font-weight: 600  ;
+}
+
+div.user.tableElement {
+  display: flex;
+  flex-direction: column wrap;
+  justify-content: flex-start;
+  gap: 35px;
+}
+
+.tableImg {
+  width: 42px;
+  height: 42px;
+}
+
+td a {
+  color: #333333;
 }
