--- a/style.css
+++ b/style.css
@@ -11,15 +11,13 @@ button {
 }
 
 button.pageButton {
+  padding: 20px 35px;
+  align-self: flex-start;
   background: #eaeaea;
   color: #333333;
-  font-size: 22px;
-  line-height: 28px;
-  padding: 20px;
-  align-self: flex-start;
+  font: normal normal normal 22px/28px Source Code Pro;
+  text-align: left;
   border: none;
-  margin: 20px 0px;
-  padding: 20px 35px;
 }
 
 #sidebar {
@@ -32,14 +30,12 @@ button.pageButton {
   position: sticky;
   top: 0px;
   gap: 40px;
-  font-size: 13px;
-  line-height: 17px;
+  font: normal normal normal 13px/17px Source Code Pro;
 }
 
 h1.sidebar {
   color: #ffffff;
-  font-size: 30px;
-  line-height: 17px;
+  font: normal normal bold 30px/38px Source Code Pro;
 }
 
 #sidebar > div.sidebar {
@@ -76,8 +72,8 @@ main {
   flex-flow: column wrap;
   align-items: center;
   justify-content: center;
-  gap: 25px;
-  margin-bottom: 75px;
+  gap: 45px;
+  margin: 0px 75px 150px 75px;
 }
 
 section {
@@ -92,29 +88,32 @@ section {
 section > form {
   max-width: 860px;
   max-height: 420px;
-  font-size: 22px;
-  line-height: 39px;
+  font: normal normal normal 22px/39px Source Code Pro;
   opacity: 0.4;
+  margin-bottom: 25px;
+}
+
+section > form::after {
+  content: ".";
+  position: fixed;
+  top: 100%;
+  left: 5px;
 }
 
 section h1 {
-  font-size: 40px;
-  line-height: 50px;
-  font-weight: 100;
+  font: normal normal normal 40px/50px Source Code Pro;
   color: transparent;
   -webkit-text-stroke: 0.75px black;
 }
 
 form input,
 textarea {
-  font-size: 20px;
-  line-height: 25px;
-  font-style: italic;
-  font-weight: 100;
+  font: italic normal 300 20px/25px Source Code Pro;
   resize: none;
   border-style: none none dashed none;
   border-bottom: 1px solid dashed;
   outline: none;
+  padding: 0px 0px 2px 5px;
 }
 
 form > input {
@@ -153,28 +152,27 @@ input.invalid {
 #chatUser {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-end;
   gap: 25px;
 }
 
 p#chatUserName {
-  font-size: 22px;
-  line-height: 28px;
+  font: normal normal normal 22px/28px Source Code Pro;
+  color: #333333;
 }
 
 p#lastSeen {
-  margin-top: -25px;
-  font-size: 13px;
-  line-height: 17px;
+  font: normal normal normal 13px/17px Source Code Pro;
+  margin-top: -22px;
   color: #cccccc;
 }
 
 #chatFeed {
   border: 1px solid #b6bdc1;
-  padding: 40px;
+  padding: 35px 35px 75px 35px;
   display: flex;
   flex-flow: column wrap;
-  gap: 45px;
+  gap: 50px;
 }
 
 #sendMessageForm {
@@ -188,7 +186,7 @@ p#lastSeen {
   flex-flow: column wrap;
   justify-content: space-between;
   align-items: flex-start;
-  gap: 10px;
+  gap: 8px;
 }
 
 #chatMessages > div {
@@ -197,9 +195,8 @@ p#lastSeen {
   border-radius: 5px;
   position: relative;
   padding: 12px 30px 12px 15px;
-  font-size: 14px;
+  font: normal normal normal 14px/18px Source Code Pro;
   color: #333333;
-  line-height: 18px;
 }
 
 #chatMessages > div.chatMessage:before {
@@ -232,35 +229,51 @@ p#lastSeen {
   background: inherit;
   box-sizing: border-box;
   transform: rotate(45deg) translate(-50%);
-  border-bottom: inherit;
-  border-right: inherit;
-  box-shadow: inherit;
 }
 
 #chatMessages :nth-child(4) {
   background: #f4f6f7;
-  padding: 20px;
-}
-
-#gift {
+  padding: 4px 22.5px 20px;
   display: flex;
   flex-flow: column;
+  gap: 5px;
+}
+
+#gift > span {
+  display: flex;
+  flex-flow: row wrap;
   align-items: center;
+  justify-content: space-around;
+}
+
+#giftIcon {
+  font-size: 25px;
 }
 
 #gift > a {
   color: #333333;
+  align-self: center;
+}
+
+#sendMessageForm {
+  background: #f4f6f7;
 }
 
 #messageInput {
-  border-style: none;
+  font: normal normal normal 14px/18px Source Code Pro;
   padding: 0px 25px;
+  border-radius: 8px 0px 0px 8px;
+  border-style: none;
+  border-right: none;
   flex: 1;
+}
+
+#messageInput:focus {
+  outline-color: #cccccc;
 }
 
 #messageInput::-webkit-input-placeholder {
   color: #cccccc;
-  font: normal normal normal 14px/18px "Source Code Pro", monospace;
 }
 
 #sendMessageButton {
@@ -285,28 +298,32 @@ table {
   border-collapse: collapse;
   color: #333333;
   font: normal normal normal 18px/23px "Source Code Pro", monospace;
+  text-align: justify;
 }
 
-th,
 td {
-  padding: 25px;
-  text-align: left;
+  padding: 15px 25px;
 }
 
 th {
-  padding: 35px !important;
+  font-weight: 600;
+  padding: 30px 25px;
+}
+
+.blankRow {
+  padding: 10px;
 }
 
 #tableHeader {
   background: #aebed8;
   color: white;
-  font-weight: 600  ;
 }
 
 div.user.tableElement {
   display: flex;
   flex-direction: column wrap;
   justify-content: flex-start;
+  align-items: center;
   gap: 35px;
 }
 
